# bilano

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  SECURITY.md  build.rs
.cargo/: config.toml
.githooks/: pre-push
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: index.html
src/: audio.rs  config.rs  icon.rs  main.rs  single.rs  tray.rs
