[package]
name = "chatmix"
version = "1.7.0"
edition = "2021"
description = "Lightweight ChatMix for Windows - balance game vs chat audio with one dial, no drivers."

[[bin]]
name = "chatmix"
path = "src/main.rs"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Media_Audio",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Security",
] }
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
tray-icon = "0.19"
global-hotkey = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
codegen-units = 1
